--- a/AdvancedSubwayRoutePlanning/AdvancedSubwayRoutePlanning/App.xaml
+++ b/AdvancedSubwayRoutePlanning/AdvancedSubwayRoutePlanning/App.xaml
@@ -1,8 +1,9 @@
-﻿<Application x:Class="ASRP.App"
+﻿<Application x:Class="AdvancedSubwayRoutePlanning.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ASRP"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:AdvancedSubwayRoutePlanning"
+             StartupUri="MainWindow.xaml"
+             Startup="AppStartup">
     <Application.Resources>
          
     </Application.Resources>
