--- a/AdvancedSubwayRoutePlanning/MainWindow.xaml
+++ b/AdvancedSubwayRoutePlanning/MainWindow.xaml
@@ -17,7 +17,7 @@
             <ColumnDefinition Width="180"/>
         </Grid.ColumnDefinitions>
 
-        <!--<local:SubwayGraph Grid.Row="0" Grid.Column="0"/>-->
+        <local:SubwayGraph x:Name="subwayGraph" Grid.Row="0" Grid.Column="0"/>
 
         <Grid x:Name="stackPanel_FunctionArea" Grid.Row="0" Grid.Column="1">
 
@@ -51,9 +51,9 @@
                     <RadioButton x:Name="radioButton_Shortest" Content="最短路径" Grid.Row="0" Grid.Column="0" Margin="0,5,0,5" IsChecked="True"/>
                     <RadioButton x:Name="radioButton_Least" Content="最少换乘" Grid.Row="0" Grid.Column="1" Margin="0,5,0,5" IsChecked="False"/>
                     <TextBlock x:Name="textBlock_StartStation" Text="起始站点：" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,5,0,5"/>
-                    <ComboBox x:Name="comboBox_StartStation" Grid.Row="1" Grid.Column="1" IsEditable="True" StaysOpenOnEdit="True" Margin="0,5,0,5"/>
+                    <ComboBox x:Name="comboBox_StartStation" Grid.Row="1" Grid.Column="1" IsEditable="True" StaysOpenOnEdit="True" Margin="0,5,0,5" Text="{Binding Path=startStation.Name, ElementName=subwayGraph}"/>
                     <TextBlock x:Name="textBlock_EndStation" Text="目标站点：" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,5,0,5"/>
-                    <ComboBox x:Name="comboBox_EndStation" Grid.Row="2" Grid.Column="1" IsEditable="True" StaysOpenOnEdit="True" Margin="0,5,0,5"/>
+                    <ComboBox x:Name="comboBox_EndStation" Grid.Row="2" Grid.Column="1" IsEditable="True" StaysOpenOnEdit="True" Margin="0,5,0,5" Text="{Binding Path=endStation.Name, ElementName=subwayGraph}"/>
                     <Button x:Name="button_Search" Content="查找" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,5,0,5" Click="searchRoute"/>
                 </Grid>
             </GroupBox>
