--- a/AdvancedSubwayRoutePlanning/SubwayGraph.xaml
+++ b/AdvancedSubwayRoutePlanning/SubwayGraph.xaml
@@ -5,8 +5,4 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:AdvancedSubwayRoutePlanning"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-            
-    </Grid>
-</UserControl>
+             d:DesignHeight="300" d:DesignWidth="300" MouseDown="UserControl_MouseDown" MouseUp="UserControl_MouseUp" MouseMove="UserControl_MouseMove" MouseWheel="UserControl_MouseWheel"/>
