--- a/AdvancedSubwayRoutePlanning/MainWindow.xaml
+++ b/AdvancedSubwayRoutePlanning/MainWindow.xaml
@@ -31,11 +31,11 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-            <GroupBox x:Name="groupBox_Cities" Header="城市" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.Row="0" Grid.Column="0">
+            <GroupBox x:Name="groupBox_Cities" Header="城市" Grid.Row="0" Grid.Column="0">
                 <ComboBox x:Name="comboBox_Cities" HorizontalAlignment="Center" VerticalAlignment="Top" Width="160" ItemsSource="{StaticResource cities}" IsReadOnly="True" Text="北京" Margin="0,5,0,5" DropDownOpened="comboBox_Cities_DropDownOpened" SelectionChanged="comboBox_Cities_SelectionChanged"/>
             </GroupBox>
 
-            <GroupBox x:Name="groupBox_Route" Header="路径规划" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.Row="1" Grid.Column="0">
+            <GroupBox x:Name="groupBox_Route" Header="路径规划" Grid.Row="1" Grid.Column="0">
                 <Grid HorizontalAlignment="Center">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
@@ -50,9 +50,9 @@
 
                     <RadioButton x:Name="radioButton_Shortest" Content="最短路径" Grid.Row="0" Grid.Column="0" Margin="0,5,0,5" IsChecked="True"/>
                     <RadioButton x:Name="radioButton_Least" Content="最少换乘" Grid.Row="0" Grid.Column="1" Margin="0,5,0,5" IsChecked="False"/>
-                    <TextBlock x:Name="textBlock_StartStation" Text="起始站点：" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,5,0,5"/>
+                    <TextBlock x:Name="textBlock_StartStation" Text="起始站点：" Grid.Row="1" Grid.Column="0" Margin="0,5,0,5"/>
                     <ComboBox x:Name="comboBox_StartStation" Grid.Row="1" Grid.Column="1" IsEditable="True" StaysOpenOnEdit="True" Margin="0,5,0,5" Text="{Binding Path=startStation.Name, ElementName=subwayGraph}"/>
-                    <TextBlock x:Name="textBlock_EndStation" Text="目标站点：" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,5,0,5"/>
+                    <TextBlock x:Name="textBlock_EndStation" Text="目标站点：" Grid.Row="2" Grid.Column="0" Margin="0,5,0,5"/>
                     <ComboBox x:Name="comboBox_EndStation" Grid.Row="2" Grid.Column="1" IsEditable="True" StaysOpenOnEdit="True" Margin="0,5,0,5" Text="{Binding Path=endStation.Name, ElementName=subwayGraph}"/>
                     <Button x:Name="button_Search" Content="查找" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,5,0,5" Click="searchRoute"/>
                 </Grid>
